--- a/components/src/patterns/side-menu/side-menu.scss
+++ b/components/src/patterns/side-menu/side-menu.scss
@@ -5,6 +5,26 @@
 @import '../header/mixins';
 @import '../header/navbar-collapsible';
 
+.#{$prefix}-sidebar {
+  .#{$prefix}-navbar-menu-item-dropdown-parent {
+    height: var(--#{$prefix}-dropdown-menu-items-height);
+  }
+  .#{$prefix}-navbar-menu-item-dropdown {
+    display: flex;
+    flex-direction: column;
+    border-left: 4px solid transparent;
+    &.opened {
+      border-left: 0;
+    }
+  }
+}
+
+.#{$prefix}-navbar-menu-popover {
+  .#{$prefix}-navbar-menu-item-link {
+    padding: 16px 10px 16px 24px;
+  }
+}
+
 .#{$prefix}-navbar-side-menu {
   @extend .#{$prefix}-navbar-collapsible;
 
@@ -29,12 +49,19 @@
 
   .#{$prefix}-navbar-icon-button {
     color: inherit;
-    margin-right: var(--sdds-spacing-element-12);
+    display: flex;
+    align-self: center;
+    margin-left: 20px;
+  }
+
+  .#{$prefix}-navbar-icon-button + .#{$prefix}-navbar-menu-item-link {
+    padding: 0 24px 0 12px;
   }
 
   .#{$prefix}-navbar-menu-item-dropdown-parent {
     display: flex;
     justify-content: space-between;
+    width: 100%;
 
     .#{$prefix}-navbar-menu-item-link {
       flex-grow: 1;
@@ -65,10 +92,6 @@
       a:active {
         color: var(--#{$prefix}-nav-item-dropdown-colour-active);
       }
-    }
-
-    .#{$prefix}-navbar-menu-item-dropdown-parent {
-      padding: 24px;
     }
   }
 
@@ -136,7 +159,7 @@
   .#{$prefix}-navbar-menu-popover {
     background: var(--#{$prefix}-navbar-side-menu-background);
     min-width: var(--#{$prefix}-navbar-popover-width);
-    box-shadow: 0px 3px 3px 0px rgb(0 0 0 / 10%);
+    box-shadow: 0 3px 3px 0 rgb(0 0 0 / 10%);
 
     .#{$prefix}-navbar-icon-button {
       display: none;
@@ -147,7 +170,6 @@
       @include sdds-navbar-menu-item;
       height: var(--#{$prefix}-navbar-side-menu-item-popover-height);
       border-bottom: 0;
-      padding: var(--#{$prefix}-navbar-popover-menu-item-padding);
     }
 
     .#{$prefix}-navbar-menu-item {
@@ -175,7 +197,6 @@
 
     .#{$prefix}-navbar-menu-item-dropdown {
       padding: 0;
-      border-left: 0;
 
       &:hover,
       &.hover {
@@ -185,7 +206,7 @@
       .#{$prefix}-navbar-menu-item-dropdown-parent {
         border-bottom: 1px solid var(--#{$prefix}-nav-item-dropdown-divider);
         height: var(--#{$prefix}-navbar-side-menu-item-popover-height);
-        padding: var(--#{$prefix}-navbar-popover-menu-item-padding);
+
         font-weight: bold;
 
         &:hover,
@@ -200,7 +221,6 @@
       }
 
       .#{$prefix}-navbar-menu__dropdown-item {
-        padding: var(--#{$prefix}-navbar-popover-menu-item-padding);
         border-bottom: 1px solid var(--#{$prefix}-nav-item-dropdown-divider);
         height: var(--#{$prefix}-navbar-side-menu-item-popover-height);
 
